@@ -39,6 +39,7 @@ max.back.off=50
 future.cache.max.size=100000
 future.cache.expire.after.write=10000
 future.cache.expire.after.access=5000
+future.cache.metric.interval=60000
 
 # Local Cache
 cache.ttl.seconds=60
